# synthesizer-core

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.toml  flake.nix
.github/workflows/: auto-release.yml
src/: artifact.rs  indent.rs  lib.rs  mapping.rs  node.rs  sequence.rs
